--- a/style.css
+++ b/style.css
@@ -2,8 +2,11 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+
 body{
     display: flex;
+    border: 1px black solid;
+    margin:0px;
 }
 
 #main-doc{
@@ -17,14 +20,44 @@ body{
     width: 23%;
     height: 100%;
     background-color: rgb(143, 37, 69);
-    padding: 20px;
+    padding: 55px 20px 20px 20px;
     box-sizing: border-box;
+}
+
+.navbar-title{
+    color: white;
+    width: 100%;
+    /* border: 1px black solid; */
+    font-size: 23px;
+    font-weight: 600;
+    text-align: center;
+    /* padding: 20px; */
+}
+
+.navbar-content{
+    /* border: 1px grey solid; */
+    margin-top: 40px;
+    text-decoration: none;
+    height: 600px;
+    
+}
+
+.navbar-content a{
+    text-decoration: none;
+}
+
+.navbar-content li{
+    list-style: none;
+    /* border: 1px black solid; */
+    margin-bottom: 30px;
+    margin-right: 25px;
+    font-size: 14px;
+    color: white;
 }
 
 .main-section{
     display: flex;
     width: 75%;
-    border: 1px black solid;
     margin-left: 24vw;
     flex-direction: column;
     padding: 5px 30px;
@@ -37,4 +70,32 @@ h1{
     color: rgb(143, 37, 69);
 }
 
+.code{
+    background-color: rgb(243, 243, 243);
+    border-radius: 10px;
+}
 
+@media (max-width: 850px){
+    #navbar{
+        position: fixed;
+        width: 100%;
+        height: 230px;
+        background-color: rgb(143, 37, 69);
+        padding: 20px;
+        box-sizing: border-box;
+    }
+
+    .main-section{
+        margin: 230px 1vw 0px 5vw;
+        /* border: 1px black solid; */
+    }
+
+    .main-doc{
+        /* border: 1px black solid; */
+    }
+
+    .navbar-content li{
+        margin-bottom: 5px;
+    
+    }
+}
